# reitti-labyrintissa

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Dokumentaatio/: Kayttohje.md  Määrittelydokumentti  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md
src/: breadth_first_search.py  dead_end_filling.py  index.py  labyrintti.py  labyrintti2.py  wall_follower.py
src/tests/: breadth_first_search_test.py  dead_end_filling_test.py  labyrintti_test.py
