[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["ainokuos <aino.kuosmanen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
